<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Security</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="version">version</string>
    <string name="upgrade_dialog_downloading">downloading...</string>
    <string name="upgrade_dialog_title">Upgrade Attention</string>
    <string name="upgrade_no_sdcard">no sdcard,please insert</string>
    <string name="upgrade_exception">Get updates exceptions, please try again later</string>
    
    <string name="main">Phone Security</string>
    <string name="protecte">Anti-theft</string>
    <string name="setPassword">Set Password</string>
    <string name="setPasswordDescription">set Anti-theft password</string>
    <string name="againPassword">input password again</string>
    <string name="protectedYes">Ok</string>
    <string name="protectedNo">Cancle</string>
    <string name="login">login</string>
    <string name="inputPassword">please input password</string>
    <string name="password_not_null">password should not be null</string>
    <string name="password_same">two word should be same</string>
    <string name="password_is_wrong">password is wrong</string>
    <string name="rename_title">Rename</string>
    <string name="rename_msg">Please input a new name.</string>
    <string name="rename_hint">new name</string>
    <string name="rename_msg_not_null">new name should not be null</string>
    
    <string name="setupGuide">SetupWizard</string>
    <string name="guide1">1.Welcome to mobile security</string>
    <string name="guide1_content">Your mobile security guard：</string>
    <string name="guide1_item1">SIM card changed alarm</string>
    <string name="guide1_item2">GPS tracking</string>
    <string name="guide1_item3">Remote Data destruction</string>
    <string name="guide1_item4">Remote lock screen</string>
    <string name="guide2">2.Phone bind</string>
    <string name="guide2_content">Sim card binding, if the next replacement, it would automatically send text messages</string>
    <string name="guide2_bind">has binded</string>
    <string name="guide2_not_bind">not bind</string>
    <string name="bind_button">bind</string>
    <string name="guide3">3.Set security phone</string>
    <string name="guide3_content">If the sim card is replaced, will send text messages to this number</string>
    <string name="guide3_item1">Please enter a security number or select a phone</string>
    <string name="guide3_item2">Select contacts</string>
    <string name="guide3_number_not_null">security phone number could not be null.</string>
    <string name="selectContact">choose contact</string>
    <string name="has_open_protect">has open protect</string>
    <string name="not_open_protect">not open protect</string>
    <string name="protect_dialog_title">Attention</string>
    <string name="protect_dialog_msg">had better open protection</string>
    
    <string name="lostProtectedNumber">safety phone number</string>
    <string name="isProtected">has open pprotect</string>
    <string name="rePlayGuide">reset into setupWizard</string>
    
    <string name="guide4">4.Congratulations, you have completed setting</string>
    <string name="guide4_content">Your phone settings have been completed</string>
    <string name="guide4_item1">The phone is not turned on protection</string>
    <string name="guide4_item2">Phone has switched on protection</string>
    <string name="next">next</string>
    <string name="perviout">pervious</string>
    <string name="finish">finish</string>
	
    <string name="grid_view_Phone_theft">phone theft</string>
    <string name="grid_view_communitcate">通讯卫士</string>
    <string name="grid_view_softManage">软件管理</string>
    <string name="grid_view_data_usage">Data usage</string>
    <string name="grid_view_task">Task Management</string>
    <string name="grid_view_antivirus">Mobile Antivirus</string>
    <string name="grid_view_optimization">系统优化</string>
    <string name="grid_view_tools">Advanced Tools</string>
    <string name="grid_view_settings">Settings center</string>
    
    <string name="sim_changed_attention">Sim card has been changed, the phone may be stolen</string>

	<string name="number_query">Phone numbers for attribution</string>
	<string name="bt_query">query</string>
	<string name="number_service">Set the phone service</string>
    <string name="number_service_state_not_open">Attribution service is not open</string>
    <string name="number_service_state_open">Attribution service has opened</string>
    <string name="select_bg">归属地显示风格</string>
    <string name="number_display">归属地显示位置</string>
    <string name="drag_view_desc">拖动紫色方块来确定归属地显示位置</string>
    
    <string name="numberSecurity">通信卫士</string>
    <string name="add">添加</string>
    <string name="update_number">修改黑名单</string>
    <string name="delete_number">删除黑名单</string>
    <string name="black_number">通信卫士</string>
    <string name="sms_backup">短信备份</string>
    <string name="sms_reset">短信还原</string>
    <string name="add_black_number">添加黑名单</string>
    <string name="hint_black_number">请输入黑名单号码</string>
    <string name="button_add_msg">添加</string>
    <string name="button_cancle_msg">取消</string>
    <string name="button_modify_msg">修改</string>
    <string name="number_not_null_msg">添加号码不能为空</string>
    <string name="update_black_number_title">更新黑名单</string>
    <string name="update_black_number_msg">请输入新的号码</string>
</resources>
