<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/tv_atool_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:textSize="24sp"
        android:text="@string/number_query"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip"
        android:background="#aabc04e5"/>
    
   <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout 
            android:layout_width="280dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">
            
            <TextView 
                android:layout_width="280dip"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/number_service"/>
            
            <TextView 
                android:id="@+id/tv_atool_number_service_state"
                android:layout_width="280dip"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#ffff0000"
                android:text="@string/number_service_state_not_open"/>
            
        </LinearLayout>
        
        <CheckBox 
            android:id="@+id/cb_atool_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>
        
    </RelativeLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip"
        android:background="#aabc04e5"/>
    
    <TextView 
        android:id="@+id/tv_atool_select_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/select_bg"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip"
        android:background="#aabc04e5"/>
    
    <TextView 
        android:id="@+id/tv_atool_change_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/number_display"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip"
        android:background="#aabc04e5"/>
    
    <EditText   
        android:id="@+id/et_query_number"  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"  
        android:inputType="number"/> 
        
    <Button   
        android:id="@+id/bt_query"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content" 
        android:layout_gravity="center"
        android:text="@string/bt_query"/> 
        
    <TextView   
        android:id="@+id/tv_query_result"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:textAppearance="?android:attr/textAppearanceLarge"/> 

</LinearLayout>
